# acb-chatbot-program

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/text/: 2025.findings-emnlp.471.txt  2510.02294v1.txt  3583780.3615994.txt  Open-Source_Embedding_Models_A_Comprehensive_Survey_of_Techniques_Benchmarks_and_Applications.txt  Text_and_Code_Embeddings_by_Contrastive_Pre_Training.txt
